--- a/src/style.scss
+++ b/src/style.scss
@@ -43,12 +43,10 @@ button {
 
 .wrapper {
   @include content-container;
+  @include shadow;
   display: flex;
   padding-top: $header-size;
   gap: $gap;
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
-  box-shadow: 0px 5px 10px 2px rgba(86, 86, 86, 0.2);
 }
 
 .subtitle {
@@ -97,7 +95,16 @@ button {
   color: $dark-text;
 }
 
+
+
 .dark-theme {
   background-color: $dark-theme-background;
   color: $dark-theme-font-color;
 }
+body.dark-theme {
+  background-color: black;
+}
+main.dark-theme {
+  background-color: #4f4f4f;
+}
+
