--- a/src/templates/header/_header.scss
+++ b/src/templates/header/_header.scss
@@ -1,10 +1,8 @@
 .header-container {
+  @include shadow;
   width: 100%;
   height: 50px;
   background-color: white;
-  box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
-  -webkit-box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
-  -moz-box-shadow: 0 7px 12px 0 rgba(121, 121, 121, 0.6);
   position: fixed;
   z-index: 100;
 }
@@ -49,7 +47,7 @@
 
   &__input {
     border: none;
-    background-color: #eaeaea;
+    background-color: #b9b9b9;
     border-radius: $border-radius;
     padding: 7px;
     width: 290px;
