--- a/src/templates/main/filmPage/series.scss
+++ b/src/templates/main/filmPage/series.scss
@@ -1,8 +1,7 @@
 .episode {
   @include background-positioning;
-  width: 32%;
+  width: 31%;
   height: 200px;
-  border-bottom: $light-dark-text solid 10px;
   padding: 10px;
   box-sizing: border-box;
   position: relative;
@@ -67,7 +66,7 @@
   &__series {
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 35px;
     justify-content: space-between;
     margin-top: 30px;
   }
@@ -88,20 +87,12 @@
 
   &__show-more {
     position: absolute;
-    bottom: 0;
+    bottom: -4px;
     right: 0;
     z-index: 2;
     background: none;
     border: none;
     cursor: pointer;
-  }
-  &__back-arrow {
-    width: 100%;
-    height: 23px;
-    position: absolute;
-    bottom: 0;
-    background-color: white;
-    z-index: 1;
   }
 }
 
@@ -117,7 +108,7 @@
   }
 }
 .collapsed {
-  max-height: 280px;
+  max-height: 269px;
 }
 .showed {
   max-height: 100%;
