--- a/src/style.scss
+++ b/src/style.scss
@@ -29,7 +29,7 @@ button {
   height: 30px;
   border-radius: $border-radius;
   min-width: 70px;
-  color: $light-title;
+  color: #00062d;
 
   &:hover {
     background-color: #59bcee;
@@ -68,8 +68,8 @@ button {
     cursor: pointer;
     transition: all .3s ease;
 
-    &:hover {
-      color: $user-name-color;
+    &:hover, &:active {
+      color: $accent-color;
     }
   }
 }
@@ -91,7 +91,7 @@ button {
 
 
 .open {
-  color: gray;
+  color: $accent-color;
 }
 
 
@@ -106,4 +106,8 @@ body.dark-theme {
 main.dark-theme {
   background-color: #4f4f4f;
 }
+.footer-container.dark-theme > a {
+  color: white;
+}
+
 
