--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -143,7 +143,6 @@
 
 .recommendations {
   margin-top: 70px;
-  color: white;
 
   &__title {
     @include title;
@@ -171,9 +170,10 @@
 
   &__textarea {
     padding: 15px;
-    background-color: $neutral-light-color;
+    background-color: #dcdcdc;
     border: none;
     min-width: 70%;
+    border-radius: $border-radius;
   }
 
   &__button {
@@ -200,6 +200,9 @@
   max-width: 70%;
   padding: 11px;
   margin: 15px 0;
+  background-color: #afafaf;
+  border-radius: $border-radius;
+  color: black;
 
   &__name {
     font-size: 18px;
