fix: body, modal styles

--- a/src/style.scss
+++ b/src/style.scss
@@ -115,12 +115,12 @@ main.dark-theme {
 
 
 
-body {
-  width: 100vw;
-  height: 100vh;
-}
+//body {
+//  width: 100vw;
+//  height: 100vh;
+//}
 
 
-.modal {
-  display: none;
-}
+//.modal {
+//  display: none;
+//}
