--- a/src/components/modals/videoplayer/_videoplayer.scss
+++ b/src/components/modals/videoplayer/_videoplayer.scss
@@ -298,10 +298,10 @@
     min-height: 200px;
     position: absolute;
     bottom: -5550px;
-    right: -120px;
+    right: -80px;
     border-radius: 16px;
     display: flex;
-    column-gap: 5px;
+    column-gap: 20px;
     padding: 20px 20px;
     font-weight: 600;
     opacity: 0;
@@ -322,9 +322,14 @@
       display: flex;
       flex-direction: column;
 
+      &-title {
+        margin: 0;
+      }
+
       .subsettings {
         &-items {
           list-style: none;
+          padding: 0;
         }
 
         &-item {
@@ -372,6 +377,10 @@
 
     &-container {
       position: relative;
+
+      & .controls-popup {
+        right: -140px;
+      }
 
       &:hover {
         .controls-popup {
