--- a/src/components/modals/authorization/_authorization.scss
+++ b/src/components/modals/authorization/_authorization.scss
@@ -1,4 +1,5 @@
-.authorization {
+.authorization,
+.change-password {
   position: absolute;
   top: 100px;
   left: 0;
@@ -21,6 +22,7 @@
     background-color: $accent-color;
     position: relative;
   }
+
   &__inner-container {
     display: flex;
     flex-direction: column;
@@ -28,6 +30,7 @@
     justify-content: center;
     padding: 20px;
   }
+
   &__form {
     width: 100%;
     display: flex;
@@ -47,16 +50,19 @@
     padding-left: 15px;
     box-sizing: border-box;
   }
+
   &__inputs {
     display: flex;
     flex-direction: column;
     gap: 20px;
     width: 100%;
   }
+
   &__button {
     padding: 10px;
     box-sizing: content-box;
   }
+
   &__buttons {
     margin-top: 40px;
     display: flex;
@@ -71,4 +77,3 @@
   right: 0;
   cursor: pointer;
 }
-
