--- a/src/style.scss
+++ b/src/style.scss
@@ -73,7 +73,7 @@ button {
 
 .background {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   background-color: black;
   opacity: 60%;
