--- a/src/templates/main/userPage/_user-page.scss
+++ b/src/templates/main/userPage/_user-page.scss
@@ -253,11 +253,14 @@
 
   &__desc {
     position: absolute;
-    left: 20px;
-    bottom: 20px;
+    bottom: 0px;
+    padding: 10px 20px;
+    background-color: $card-background;
+    width: 100%;
 
     &-name {
-      line-height: 32px;
+      font-size: 24px;
+      line-height: 24px;
       margin-bottom: 5px;
     }
   }
