--- a/src/components/modals/authorization/_authorization.scss
+++ b/src/components/modals/authorization/_authorization.scss
@@ -1,4 +1,5 @@
 .authorization,
+.register,
 .change-password {
   position: absolute;
   top: 100px;
@@ -61,6 +62,8 @@
   &__button {
     padding: 10px;
     box-sizing: content-box;
+    line-height: 30px;
+    cursor: pointer;
   }
 
   &__buttons {
