fix: modal position

--- a/src/components/modals/authorization/_authorization.scss
+++ b/src/components/modals/authorization/_authorization.scss
@@ -1,6 +1,6 @@
 .authorization,
 .change-password {
-  position: absolute;
+  position: fixed;
   top: 100px;
   left: 0;
   right: 0;
@@ -76,4 +76,8 @@
   top: 0;
   right: 0;
   cursor: pointer;
+}
+
+.background.active {
+  height: 100%;
 }
