feat: ratings view

--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -265,3 +265,16 @@
 .films__title {
   font-size: 40px;
 }
+
+.film-page .card-film__rating-container-kp {
+  top: 10%;
+  left: 0;
+}
+.film-page .card-film__rating-container-imbd {
+  top: 10%;
+  left: 10%;
+}
+.film-page .films__favorites {
+  top: 10%;
+  right: 5%;
+}
