--- a/src/templates/main/films/_films.scss
+++ b/src/templates/main/films/_films.scss
@@ -6,7 +6,6 @@
   gap: $gap;
   // margin-top: $header-size;
 
-
   &__big-element {
     height: 550px;
     background-position-x: center;
@@ -55,4 +54,12 @@
 .film {
   overflow: hidden;
   max-height: 550px;
+}
+
+.swiper {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  width: 100%;
+  height: 350px;
 }
