feat: add person page (without films)

--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
 @import "./templates/main/films/films";
 @import "./templates/main/filmPage/filmPage";
 @import "templates/main/filmPage/series";
+@import "templates/main/personPage/person-page";
 @import "components/themes/themeElement";
 @import "./templates/footer/footer";
 
