--- a/src/components/modals/authorization/_authorization.scss
+++ b/src/components/modals/authorization/_authorization.scss
@@ -11,8 +11,9 @@
   z-index: 103;
   display: none;
 
-  & .active {
-    display: block;
+  &__error-message {
+    display: none;
+    color: $error-text
   }
 
   &__title {
@@ -83,4 +84,8 @@
 
 .background.active {
   height: 100%;
+}
+
+.active {
+  display: block;
 }
