--- a/src/templates/main/personPage/_person-page.scss
+++ b/src/templates/main/personPage/_person-page.scss
@@ -24,8 +24,15 @@
     left: 50px;
   }
   &__title {
-    margin-top: 20px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     @include title;
+  }
+  &__films {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    row-gap: 15px;
   }
 }
 
