--- a/src/templates/main/editProfile/_editProfile.scss
+++ b/src/templates/main/editProfile/_editProfile.scss
@@ -71,3 +71,7 @@
 body.dark-theme .edit-profile__form-gender-label {
   border-color: $light-dark-text;
 }
+
+input.invalid {
+  border: solid 2px red;
+}
