--- a/src/style.scss
+++ b/src/style.scss
@@ -33,14 +33,14 @@ button {
   border-radius: $border-radius;
   min-width: 70px;
   color: #00062d;
+  transition: background-color ease 0.2s;
 
   &:hover {
     background-color: #59bcee;
   }
 
   &:active {
-    scale: 1.1;
-    background-color: $accent-color;
+    background-color: #3c8fb9;
   }
 }
 
