--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -4,6 +4,7 @@
   &__header-margin {
     margin-top: 10px;
     margin-bottom: 20px;
+    cursor: auto;
   }
 
   &__th {
@@ -56,6 +57,7 @@
 
   &__middle {
     grid-area: mdl;
+    cursor: pointer;
   }
 
   &__group {
@@ -67,10 +69,12 @@
 
   &__group>div {
     @include background-positioning;
+    cursor: pointer;
   }
 
   &__big {
     grid-area: big;
+    cursor: pointer;
   }
 }
 
@@ -102,10 +106,11 @@
     padding: 5px;
     border-radius: 5px;
     transition: background-color 0.2s ease;
-
+    cursor: pointer;
   }
+
   &__container:hover {
-  background-color: rgba(90, 194, 241, 0.48);
+    background-color: rgba(90, 194, 241, 0.48);
   }
 
   &__real-name {
@@ -243,6 +248,7 @@
 
 .episode__play {
   text-align: center;
+  cursor: pointer;
 }
 
 .trailer__label {
@@ -277,10 +283,12 @@
   top: 10%;
   left: 0;
 }
+
 .film-page .card-film__rating-container-imbd {
   top: 10%;
   left: 10%;
 }
+
 .film-page .films__favorites {
   top: 10%;
   right: 5%;
