--- a/src/templates/main/films/_films.scss
+++ b/src/templates/main/films/_films.scss
@@ -20,6 +20,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    cursor: pointer;
   }
 
   &__big-element::before {
