--- a/src/templates/main/filmPage/_filmPage.scss
+++ b/src/templates/main/filmPage/_filmPage.scss
@@ -40,6 +40,7 @@
   width: 70%;
   margin-left: auto;
   position: relative;
+  margin-bottom: 30px;
 
   &>div {
     width: 100%;
@@ -284,4 +285,8 @@
 .film-page .films__favorites {
   top: 10%;
   right: 5%;
+}
+
+.adding-button {
+  margin-left: 83%;
 }
