--- a/src/style.scss
+++ b/src/style.scss
@@ -93,7 +93,7 @@ button {
 
 .background {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: absolute;
   background-color: black;
   opacity: 60%;
