--- a/src/style.scss
+++ b/src/style.scss
@@ -90,7 +90,7 @@ button {
 .background {
   width: 100%;
   height: 100vh;
-  position: absolute;
+  position: fixed;
   background-color: black;
   opacity: 60%;
   z-index: 102;
