fix: fix layot background

--- a/src/style.scss
+++ b/src/style.scss
@@ -93,7 +93,7 @@ button {
 
 .background {
   width: 100%;
-  height: max(100%, 100vh);
+  height: 120%;
   position: absolute;
   background-color: black;
   opacity: 60%;
